# trustworthy-c-spike

./: .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  config.h.in  crypto_aesctr.c  crypto_aesctr.h  hkdf.c  hkdf.h  master_key.c  master_key.h  random.c  random.h  subkey.c  subkey.h  trustworthy.c
tests/: Makefile.am  Makefile.in  crypto_aesctr_tests.c  hkdf_tests.c  master_key_tests.c  random_tests.c  subkey_tests.c  test_helper.c  test_helper.h  test_runner.c  test_suite.h
